# blog_system2

./: .pre-commit-config.yaml  erd.mmd  pyproject.toml  scema.sql
app/: database.py  models.py  schemas.py
app/routes/: users.py
blog_system/: README.md  gitignore.txt  pre-commit-config.yaml  pyproject.txt  requirements-dev.txt  requirements.txt
blog_system/app/: database.py  main.py  models.py  schemas.py
blog_system/app/routes/: categories.py  comments.py  posts.py
blog_system/ddl/: 01_users.sql  02_categories.sql  03_posts.sql  04_comments.sql  05_favorites.sql  06_subscriptions.sql  create_all.sql
blog_system/docs/: er_diagram.md
blog_system/templates/: base.html  create_post.html  edit_post.html
templates/: index.html  post.htm
